# domain/model/src/main/java/co/com/nequi/model/product/Product.java
@@ -1,0 +1,7 @@
+package co.com.nequi.model.product;
+
+public record Product(Long id, String name, Long branchId) {
+    public Product(String name, Long branchId) {
+        this(null, name, branchId);
+    }
+}
