# infrastructure/driven-adapters/r2dbc-postgresql/src/main/java/co/com/nequi/r2dbc/entities/ProductEntity.java
@@ -1,0 +1,21 @@
+package co.com.nequi.r2dbc.entities;
+
+import org.springframework.data.annotation.Id;
+import org.springframework.data.relational.core.mapping.Table;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@Table(name = "products")
+public class ProductEntity {
+    @Id
+    private Long id;
+    private String name;
+    private Long branchId;
+}
